--- a/app/src/main/res/layout/dialog_audio.xml
+++ b/app/src/main/res/layout/dialog_audio.xml
@@ -26,7 +26,8 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        backgroundColor="@{theme.secondaryTextColor}">
+        android:orientation="vertical"
+        backgroundColor="@{theme.backgroundColor}">
 
         <TextView
             textColor="@{theme.primaryTextColor}"
